--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(dsa)
 
-set(SOURCES main.c src/ds/darray.c src/algos/selectionSort.c)
+set(SOURCES main.c 
+    src/ds/darray.c 
+    src/algos/selectionSort.c 
+    src/algos/bubbleSort.c)
 
 add_executable(dsa ${SOURCES})
 
