feat: merge sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES main.c
     src/ds/darray.c 
     src/ds/llist.c
     src/ds/stack.c
+    src/algos/mergeSort.c
     src/algos/insertionSort.c
     src/algos/selectionSort.c 
     src/algos/bubbleSort.c)
