--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,10 @@ set(SOURCES main.c
     src/algos/selectionSort.c 
     src/algos/bubbleSort.c)
 
-add_executable(dsa ${SOURCES})
-target_include_directories(dsa PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+#add_executable(dsa ${SOURCES})
+#target_include_directories(dsa PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-#[[add_library(dsa STATIC ${SOURCES})
+add_library(dsa STATIC ${SOURCES})
 
 target_include_directories(dsa
     PUBLIC
@@ -36,5 +36,5 @@ install(TARGETS dsa
 install(DIRECTORY include/ds DESTINATION include)
 install(DIRECTORY include/ds DESTINATION include)
 
-install(EXPORT dsa-config NAMESPACE dsa:: DESTINATION lib/cmake/dsa)]]
+install(EXPORT dsa-config NAMESPACE dsa:: DESTINATION lib/cmake/dsa)
 
