--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
-project(dsa)
+project(dsa C)
+set(CMAKE_C_STANDARD 11)
 
-set(SOURCES main.c 
+set(SOURCES
     src/common.c
     src/ds/darray.c 
     src/ds/llist.c
@@ -12,10 +13,9 @@ set(SOURCES main.c
     src/algos/selectionSort.c 
     src/algos/bubbleSort.c)
 
-add_executable(dsa ${SOURCES})
-target_include_directories(dsa PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_subdirectory(test)
 
-#[[add_library(dsa STATIC ${SOURCES})
+add_library(dsa STATIC ${SOURCES})
 
 target_include_directories(dsa
     PUBLIC
@@ -36,5 +36,7 @@ install(TARGETS dsa
 install(DIRECTORY include/ds DESTINATION include)
 install(DIRECTORY include/ds DESTINATION include)
 
-install(EXPORT dsa-config NAMESPACE dsa:: DESTINATION lib/cmake/dsa)]]
+install(EXPORT dsa-config NAMESPACE dsa:: DESTINATION lib/cmake/dsa)
 
+add_executable(dsaRun main.c)
+target_link_libraries(dsaRun dsa)
